--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,6 +20,12 @@
                             <a href="{{ url_for('index') }}" class="navbar-item">
                                 Home
                             </a>
+                            <a href="{{ url_for('sign_in') }}" class="navbar-item">
+                                Sign In
+                            </a>
+                            <a href="{{ url_for('sign_out') }}" class="navbar-item">
+                                Sign Out
+                            </a>
                         </div>
                     </div>
                 </div>
