--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1 class="title">
-    Flask Login Example
-</h1>
-<h2 class="subtitle">
-    Easy authentication and authorization in Flask.
-</h2>
+<section class="section">
+    <h1 class="title">
+        Hello World
+    </h1>
+    <p class="subtitle">
+        My first website with <strong>Bulma</strong>!
+    </p>
+</section>
 {% endblock %}
