--- a/app/templates/courses.html
+++ b/app/templates/courses.html
@@ -3,10 +3,10 @@
 {% block content %}
 <section class="section">
     <h1 class="title">
-        CC Portal Alunos
+        Cursos
     </h1>
     <p class="subtitle">
-        Isso é um <strong>Exemplo</strong>!
+        Essa página vai listar <strong>cursos</strong>!
     </p>
 </section>
 {% endblock %}
