--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -3,10 +3,10 @@
 {% block content %}
 <section class="section">
     <h1 class="title">
-        CC Portal Alunos
+        Dados Pessoais
     </h1>
     <p class="subtitle">
-        Isso é um <strong>Exemplo</strong>!
+        Essa página vai servir para coletar <strong>dados</strong>!
     </p>
 </section>
 {% endblock %}
