--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 <h1 class="title">
-    LOGGED IN
+    Home
 </h1>
 <h2 class="subtitle">
-    Easy authentication and authorization in Flask.
+    Essa página vai listar os cursos do <strong>aluno</strong>
 </h2>
 {% endblock %}
