--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1 class="title">
-    Home
+    Bem vindo {{ session.username }}!
 </h1>
 <h2 class="subtitle">
     Essa página vai listar os cursos do <strong>aluno</strong>
